Issue #450 - Fix header and contrast issues on login page

--- a/blocks/site/_main.scss
+++ b/blocks/site/_main.scss
@@ -45,22 +45,6 @@ body > main {
   margin-bottom: 3.3rem;
 }
 
-.p_center{
-  text-align: center;
-}
-
-.p_gold{
-  color: #ffb250;
-}
-
-.border_blue{
-  border-color: #0054a6;
-}
-
-.background_blue{
-  background-color: #0054a6; 
-}
-
 .name-on-hover{
   white-space: nowrap; 
   overflow: hidden;
